pre-heroku push

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
 		</div>
 
 		<script src="/common/ajax-functions.js" type="text/javascript"></script>
+		<script src="/common/searchApi.server.js" type="text/javascript"></script>
 		<script src="/controllers/linkController.client.js" type="text/javascript"></script>
 	</body>
 </html>
